# voicevox-api-rust

./: Cargo.toml  LICENSE  Makefile.toml  README.md
.openapi-generator/: FILES
docs/: .md  AccentPhrase.md  AudioQuery.md  DefaultApi.md  DownloadableLibrary.md  EngineManifest.md  HttpValidationError.md  LicenseInfo.md  Mora.md  MorphableTargetInfo.md  ParseKanaBadRequest.md  Preset.md  Speaker.md  SpeakerInfo.md  SpeakerStyle.md  SpeakerSupportPermittedSynthesisMorphing.md  SpeakerSupportedFeatures.md  StyleInfo.md  SupportedDevicesInfo.md  SupportedFeatures.md  UpdateInfo.md  UserDictWord.md  ValidationError.md  WordTypes.md
example/: Cargo.toml
example/src/: main.rs
src/: apis.rs
src/apis/: configuration.rs  default_api.rs
src/models/: accent_phrase.rs  audio_query.rs  downloadable_library.rs  engine_manifest.rs  http_validation_error.rs  license_info.rs  mora.rs  morphable_target_info.rs  parse_kana_bad_request.rs  preset.rs  speaker.rs  speaker_info.rs  speaker_style.rs  speaker_support_permitted_synthesis_morphing.rs  speaker_supported_features.rs  style_info.rs  supported_devices_info.rs  supported_features.rs  update_info.rs  user_dict_word.rs  validation_error.rs  word_types.rs
