[package]
name = "voicevox_api"
version = "0.14.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
